--- a/wallust/colors-waybar.css
+++ b/wallust/colors-waybar.css
@@ -1,24 +1,24 @@
 /* ---- 💫 https://github.com/JaKooLit 💫 ---- */  
  /* wallust template - colors-waybar */
 
- @define-color foreground #E6B8DA;
- @define-color background #151018;
+ @define-color foreground #FFFFFF;
+ @define-color background #9E01DF;
  @define-color background-alt rgba(21,16,24,0.25);
- @define-color cursor #856288;
+ @define-color cursor #9E01DF;
  
- @define-color color0 #3C3840;
- @define-color color1 #140623;
- @define-color color2 #1B0828;
- @define-color color3 #2E0541;
- @define-color color4 #5E1B54;
- @define-color color5 #8A2870;
- @define-color color6 #8A2870;
- @define-color color7 #D392C2;
- @define-color color8 #946688;
- @define-color color9 #1A082F;
- @define-color color10 #240B35;
- @define-color color11 #3D0657;
- @define-color color12 #7D246F;
- @define-color color13 #B83596;
- @define-color color14 #B83596;
- @define-color color15 #D392C2; 
+ @define-color color0 #9E01DF;
+ @define-color color1 #9E01DF;
+ @define-color color2 #9E01DF;
+ @define-color color3 #9E01DF;
+ @define-color color4 #9E01DF;
+ @define-color color5 #9E01DF;
+ @define-color color6 #9E01DF;
+ @define-color color7 #9E01DF;
+ @define-color color8 #9E01DF;
+ @define-color color9 #9E01DF;
+ @define-color color10 #9E01DF;
+ @define-color color11 #9E01DF;
+ @define-color color12 #9E01DF;
+ @define-color color13 #9E01DF;
+ @define-color color14 #9E01DF;
+ @define-color color15 #9E01DF; 
