--- a/style/[Colored] Translucent.css
+++ b/style/[Colored] Translucent.css
@@ -119,7 +119,7 @@ tooltip {
 #custom-backlight,
 #custom-browser,
 #custom-cava_mviz {
-    color:#FFFFFF;
+    color:#BD93F9;
     font-size: 150%;
 }
 #custom-cycle_wall,
