--- a/style/[Colored] Translucent.css
+++ b/style/[Colored] Translucent.css
@@ -118,7 +118,7 @@ tooltip {
 #workspaces,
 #custom-backlight,
 #custom-browser,
-#custom-cava_mviz {
+#custom-cava {
     color:#BD93F9;
     font-size: 150%;
 }
