--- a/style/[Colored] Translucent.css
+++ b/style/[Colored] Translucent.css
@@ -331,8 +331,8 @@ tooltip {
 }
 
 #custom-menu {
-    font-size: 150%;
-    color: #FFFFFF;
+    font-size: 142%;
+    color: #BD93F9;
 }
 
 #custom-keyboard,
